--- a/Style/Style.css
+++ b/Style/Style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
 
-
 * {
     padding: 0;
     margin: 0;
@@ -40,12 +39,13 @@ nav a {
     color: rgb(32, 32, 32);
     font-weight: 400;
     font-size: 24px;
-    transition: all 0.1s ease 0s;
+    padding: 10px;
 }
 
 nav a:hover {
     font-weight: 600;
     font-size: 26px;
+    transition: all 0.2s ease 0s;
 }
 
 .Banner {
@@ -61,12 +61,17 @@ nav a:hover {
 }
 
 .center {
-    text-align: center;
+    margin: 0 auto;
 }
 
 .logo {
     height: 200px;
     margin-top: 140px;
+}
+
+.bt {
+    display: flex;
+    justify-content: center;
 }
 
 .seta-d {
@@ -79,19 +84,28 @@ nav a:hover {
     height: 60px;
     margin-top: 180px;
     padding: 0px 30px;
+    transition: all 0.2s ease 0s;
 }
 
-.seta-l,
 .seta-r:hover {
     cursor: pointer;
+    height: 68px;
+}
+
+.seta-l:hover {
+    cursor: pointer;
+    height: 68px;
 }
 
 .info {
     text-align: center;
-    margin-top: 50px;
     padding: 50px 0px;
     box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.25);
     font-family: 'Kalam';
+}
+
+.a {
+    margin-top: 50px;
 }
 
 .info h1 {
@@ -107,24 +121,21 @@ nav a:hover {
 }
 
 .menina {
-    height: 275px;
-    display: flex;
-    justify-content: center;
-
-
+    width: 100%;
+    text-align: center;
+    margin-top: -150px;
 }
 
 .menina img {
-    height: 450px;
-    margin-top: -125px;
+    width: 80%;
     margin-left: 80px;
-    position: relative;
+    margin-bottom: -5px;
 }
 
 .visao {
     text-align: center;
     margin-top: 50px;
-    padding: 50px 0px;
+    padding: 30px 0px;
     font-family: 'Kalam';
 }
 
@@ -174,7 +185,7 @@ button:hover {
     background-color: rgb(31, 31, 31);
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
     color: #fff;
-    font-size: 16px;
+    font-size: 14px;
     transform: translateY(-7px);
 }
 
@@ -198,4 +209,47 @@ button:active {
 .rede img {
     margin-top: 20px;
     height: 40px;
+}
+
+@media screen and (max-width: 900px) {
+    .menina {
+        margin-top: -120px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+
+    .seta-l,
+    .seta-r {
+        display: none;
+    }
+
+    .banner {
+        display: flex;
+        justify-content: center;
+    }
+
+    .center {
+        margin: 0 auto;
+    }
+
+    .menina {
+        margin-top: -80px;
+    }
+
+    header {
+        display: flex;
+        justify-content: center;
+    }
+
+    nav a {
+        display: none;
+        font-size: 1px;
+    }
+
+    iframe {
+        width: 400px;
+        height: 225px;
+    }
+
 }
