--- a/Style/Style.css
+++ b/Style/Style.css
@@ -250,7 +250,7 @@ button:active {
 
     .info {
         box-shadow: 0px 0px;
-        border: 1px solid yellow;
+        border-bottom: 2px solid #ffe564;
 
     }
 
